change(ch04): 要素を示す変数の名前を変更
- ...E => ...Element
- ...Elms => Elements

refs #81

--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -242,9 +242,9 @@ JavaScriptでHTMLの要素を扱えるようにします。
 jQueryの`$`関数はこのように万能なものとなります。
 
 ```javascript
-var carouselE = $(".js-slides");
-var paginationE = $(".js-slides-pagination");
-var paginationItemElms = $(".js-slides-pagination li");
+var carouselElement = $(".js-slides");
+var paginationElement = $(".js-slides-pagination");
+var paginationItemElements = $(".js-slides-pagination li");
 ```
 
 ## カルーセルの実装をする
@@ -256,7 +256,7 @@ HTMLの要素を取得したらカルーセルの実装をしていきます。
 まずカルーセルの元になる`Carousel`関数から説明します。
 `Carousel`関数はパラメーターとして、次のふたつがあります
 
-- カルーセルの要素を示す`carouselE`
+- カルーセルの要素を示す`carouselElement`
 - カルーセルの設定を示す`config`
 
 これらのパラメーターを元に`Carousel`関数でslickが使えるようにします。
@@ -266,13 +266,13 @@ HTMLの要素を取得したらカルーセルの実装をしていきます。
 この実装にはslickで定義されている`slickCurrentSlide`という関数を使います。
 
 ```javascript
-function Carousel(carouselE, config) {
-  this.carouselE = carouselE;
-  carouselE.slick(config);
+function Carousel(carouselElement, config) {
+  this.carouselElement = carouselElement;
+  carouselElement.slick(config);
 }
 
 Carousel.prototype.currentIndex = function() {
-  return this.carouselE.slick("slickCurrentSlide");
+  return this.carouselElement.slick("slickCurrentSlide");
 };
 ```
 
@@ -283,28 +283,28 @@ Carousel.prototype.currentIndex = function() {
 ページネーションの元になる`CarouselPagination`関数を説明します。
 `CarouselPagination`関数ではパラメーターとして、次の3つがあります。
 
-- ページネーションの要素を示す`paginationE`
-- ページネーション内の要素を示す`paginationItemElms`
+- ページネーションの要素を示す`paginationElement`
+- ページネーション内の要素を示す`paginationItemElements`
 - アクティブなページを示す`activePageName`
 
 これらのパラメーターを元に`CarouselPagination`関数でページネーションが使えるようにします。
 あとはカルーセルの表示切り替え時に`activatePage`関数と`deactivatePage`関数を呼び出してページネーションの表示を変えられるようにします。
 
 ```javascript
-function CarouselPagination(paginationE, paginationItemElms, activePageName) {
+function CarouselPagination(paginationElement, paginationItemElements, activePageName) {
   this.activePageName = activePageName;
-  this.paginationE = paginationE;
-  this.paginationItemElms = paginationItemElms;
+  this.paginationElement = paginationElement;
+  this.paginationItemElements = paginationItemElements;
 }
 
 CarouselPagination.prototype.activatePage = function(index) {
-  this.paginationItemElms[index].classList.add(this.activePageName);
+  this.paginationItemElements[index].classList.add(this.activePageName);
 };
 
 CarouselPagination.prototype.deactivatePage = function() {
   var _this = this;
 
-  Array.prototype.map.call(this.paginationItemElms, function(paginationItemE) {
+  Array.prototype.map.call(this.paginationItemElements, function(paginationItemE) {
     paginationItemE.classList.remove(_this.activePageName);
   });
 };
@@ -322,7 +322,7 @@ CarouselPagination.prototype.deactivatePage = function() {
 - arrows：前・次へボタンを表示するか
 
 ```javascript
-var carousel = new Carousel(carouselE, {
+var carousel = new Carousel(carouselElement, {
   autoplay: true,
   autoplaySpeed: 5000,
   arrows: false
@@ -335,7 +335,7 @@ var carousel = new Carousel(carouselE, {
 ページネーションの初期設定として、現在アクティブであることを示すクラス名が最初のドットへ付くようにします。
 
 ```javascript
-var carouselPagination = new CarouselPagination(paginationE, paginationItemElms, "ll-slides-pagination__active");
+var carouselPagination = new CarouselPagination(paginationElement, paginationItemElements, "ll-slides-pagination__active");
 carouselPagination.activatePage(carousel.currentIndex());
 ```
 
@@ -345,7 +345,7 @@ carouselPagination.activatePage(carousel.currentIndex());
 この実装にはslickで定義されている`afterChange`というイベントをjQueryの`on`関数を使って拾えるようにします。
 
 ```javascript
-carouselE.on("afterChange", function() {
+carouselElement.on("afterChange", function() {
   carouselPagination.deactivatePage();
   carouselPagination.activatePage(carousel.currentIndex());
 });
@@ -361,51 +361,51 @@ $(function() {
 
   //////////////////////////////////////////////////
 
-  function Carousel(carouselE, config) {
-    this.carouselE = carouselE;
-    carouselE.slick(config);
+  function Carousel(carouselElement, config) {
+    this.carouselElement = carouselElement;
+    carouselElement.slick(config);
   }
 
   Carousel.prototype.currentIndex = function() {
-    return this.carouselE.slick("slickCurrentSlide");
+    return this.carouselElement.slick("slickCurrentSlide");
   };
 
   //////////////////////////////////////////////////
 
-  function CarouselPagination(paginationE, paginationItemElms, activePageName) {
+  function CarouselPagination(paginationElement, paginationItemElements, activePageName) {
     this.activePageName = activePageName;
-    this.paginationE = paginationE;
-    this.paginationItemElms = paginationItemElms;
+    this.paginationElement = paginationElement;
+    this.paginationItemElements = paginationItemElements;
   }
 
   CarouselPagination.prototype.activatePage = function(index) {
-    this.paginationItemElms[index].classList.add(this.activePageName);
+    this.paginationItemElements[index].classList.add(this.activePageName);
   };
 
   CarouselPagination.prototype.deactivatePage = function() {
     var _this = this;
 
-    Array.prototype.map.call(this.paginationItemElms, function(paginationItemE) {
+    Array.prototype.map.call(this.paginationItemElements, function(paginationItemE) {
       paginationItemE.classList.remove(_this.activePageName);
     });
   };
 
   //////////////////////////////////////////////////
 
-  var carouselE = $(".js-slides");
-  var paginationE = $(".js-slides-pagination");
-  var paginationItemElms = $(".js-slides-pagination li");
+  var carouselElement = $(".js-slides");
+  var paginationElement = $(".js-slides-pagination");
+  var paginationItemElements = $(".js-slides-pagination li");
 
-  var carousel = new Carousel(carouselE, {
+  var carousel = new Carousel(carouselElement, {
     autoplay: true,
     autoplaySpeed: 5000,
     arrows: false
   });
 
-  var carouselPagination = new CarouselPagination(paginationE, paginationItemElms, "ll-slides-pagination__active");
+  var carouselPagination = new CarouselPagination(paginationElement, paginationItemElements, "ll-slides-pagination__active");
   carouselPagination.activatePage(carousel.currentIndex());
 
-  carouselE.on("afterChange", function() {
+  carouselElement.on("afterChange", function() {
     carouselPagination.deactivatePage();
     carouselPagination.activatePage(carousel.currentIndex());
   });
