fix(ch04): どのページがいま表示されているか示す => いま表示しているページがどこか示す
refs #81

--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -251,7 +251,7 @@ var paginationItemElements = $(".js-slides-pagination li");
 
 HTMLの要素を取得したらカルーセルの実装をしていきます。
 今回カルーセルの実装をする上でslickというライブラリを使っていきます。
-このslickを使えるよう初期化する関数と、どのページがいま表示されているか示すための関数を実装していきます。
+このslickを使えるよう初期化する関数と、いま表示しているページがどこか示すための関数を実装していきます。
 
 まずカルーセルの元になる`Carousel`関数から説明します。
 `Carousel`関数はパラメーターとして、次のふたつがあります
