fix(ch04): ドットという記述を削除
refs #81

--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -332,7 +332,7 @@ var carousel = new Carousel(carouselElement, {
 ## ページネーションが動くようにする
 
 カルーセルと同じように、実装したページネーションを次のとおり呼び出してページネーションを動かします。
-ページネーションの初期設定として、現在アクティブであることを示すクラス名が最初のドットへ付くようにします。
+ページネーションの初期設定として、ページネーション内はじめの`li`要素に現在アクティブであることを示すクラス名が付くようにします。
 
 ```javascript
 var carouselPagination = new CarouselPagination(paginationElement, paginationItemElements, "ll-slides-pagination__active");
