fix(ch0*): ラブライブ! => ラブライブ！
fix #114

--- a/articles/draft/ch02.md
+++ b/articles/draft/ch02.md
@@ -1,10 +1,10 @@
 # サイト開発の準備
 
-この章ではラブライブ!参加者募集サイトを実装する前の準備について書きます。
+この章ではラブライブ！参加者募集サイトを実装する前の準備について書きます。
 
 ## 必要なツールの準備
 
-はじめに、ラブライブ!参加者募集サイトの実装で必要なツールを準備します。
+はじめに、ラブライブ！参加者募集サイトの実装で必要なツールを準備します。
 最低限必要なものを列挙していくと以下のものがあります。
 
 - ソースコードを書くためのエディターもしくはIDE
@@ -161,10 +161,10 @@ flipsnap.jsはドキュメントに次の項目がよくまとまっています
 
 今回CSSのライブラリは[Bootstrap](https://github.com/twbs/bootstrap)のテーマである[Nico](http://kubosho.github.io/Nico/)を使います。
 
-選定した理由としては、今回デザイナーがいない中ラブライブ!参加者募集サイトの見た目をアニメに近づけたいという思いがありました。
-ラブライブ!参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているためBootstrapを使うことにしました。
+選定した理由としては、今回デザイナーがいない中ラブライブ！参加者募集サイトの見た目をアニメに近づけたいという思いがありました。
+ラブライブ！参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているためBootstrapを使うことにしました。
 
-ラブライブ!参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。
+ラブライブ！参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。
 なので今回のために[Honoka - 日本語も美しく表示できるBootstrapテーマ](http://honokak.osaka/)を元にNicoというBootstrapのテーマを作りました。
 
 ## ライブラリの選定JavaScript編
