fix(ch01): ユーザーへ一 => ユーザーへ1番
https://twitter.com/GeckoTang/status/678139610610855936

--- a/articles/draft/ch01.md
+++ b/articles/draft/ch01.md
@@ -47,7 +47,7 @@
 たとえば以下のことが考えられます。
 
 - ターゲットユーザーがよく使いそうなボタン・機能をクリックしやすいところへ置く
-- ユーザーへ一伝えたいことを見やすいところに置く
+- ユーザーへ1番伝えたいことを見やすいところに置く
 
 ### 今回の要素について整理
 
