--- a/articles/draft/ch01.md
+++ b/articles/draft/ch01.md
@@ -16,7 +16,7 @@
 - 質問：どんなサイトを作る？
 - 回答：「ラブライブ！」というイベントの情報を発信するサイトを作りたい
 - 質問：どんな情報を発信しよう？
-- 回答：イベントの開催日・参加者・またはチケット情報などを発信しよう
+- 回答：イベントの開催日や参加者、チケット情報などを発信しよう
 - 回答：現場へ来れない人のためにネットでライブを楽しめる機能があったらいいかも
 - 回答：イベントがいろんな人に知られるとうれしいから、SNSなどで簡単に拡散できる機能も欲しいなー
 
@@ -35,18 +35,18 @@
 今回は主に見てもらいたいユーザーとして、スクールアイドルが挙げられます。
 この参加者募集サイトを見た後にスクールアイドルが応募してくれるような体験を作ることが大事です。
 
-次に機能です。今回は工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。
+次に機能です。今回は工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作ることにしました。
 このように期限と開発期間から現実的な範囲で判断する事も要件定義の一部となります。
 
 ## 要素を整理する
 
-サイト内のボタン・画像・テキストなど、さまざまな表示・動作する情報を「要素」と呼びます。
+サイト内のボタンや画像、テキストなどさまざまな表示、動作する情報を「要素」と呼びます。
 どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。
 そのため要素を置く場所が合理的なのか判断するため、ターゲットユーザーの分析が必要となります。
 ユーザーが「最も合理的」と感じる方向に向かって、さまざまなことを考え設計するべきです。
 たとえば以下のことが考えられます。
 
-- ターゲットユーザーがよく使いそうなボタン・機能をクリックしやすいところへ置く
+- ターゲットユーザーがよく使いそうなボタンや機能をクリックしやすいところへ置く
 - ユーザーへ1番伝えたいことを見やすいところに置く
 
 ### 今回の要素について整理
@@ -89,7 +89,7 @@
 - 広告スペース
 
 ここで最初に書いた要件定義を思い出しましょう。
-今回は「工数・スケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作る」ということでした。
+今回は「工数やスケジュールを考えた結果、トップページとライブ中継ページの2ページのみ作る」ということでした。
 つまり他のページについて要素整理は必要なく、ここで終わらせることができます。
 今回、どこまで資料が必要なのかは要件定義の段階で明確にしていました。
 そのため余計な作業はなくなり、効率的に開発を進める事ができます。
@@ -159,7 +159,7 @@ Excelがない場合はGoogle Driveのスプレッドシートも最低限な機
 
 はじめに気をつける事として、要素は色もしくは形で分けるように書くことです。
 ワイヤーフレームの要素は大きく分けて画像・テキスト・ボタンの3種類に分けられます。
-さらに動作の要素を入れると、スクロール・ポップアップなどがあります。
+さらに動作の要素を入れると、スクロールやポップアップなどがあります。
 これらを見分けがつくように分けて書くことをおすすめします。
 
 次に気をつける事として、ワイヤーフレームに余計な情報を入れないということです。
@@ -168,18 +168,18 @@ Excelがない場合はGoogle Driveのスプレッドシートも最低限な機
 グラフィックやUIの方向性を決めるのはアートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。
 
 最後に気をつける事として、仕様書は箇条書きにすることです。
-それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。
+それぞれの要素や動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって不明な点がない状態でコーディングできるよう目指します。
 
 ## 今回のワイヤーフレームと仕様書について
 
-要件定義の段階で判明していましたが今回はページ数・要素共に少ないです。
+要件定義の段階で判明していましたが今回はページ数と要素の両方とも少ないです。
 そのためワイヤーフレームと仕様書をまとめて書きました。1ページずつ見ていきましょう。
 
 ### トップページのワイヤーフレームと仕様
 
 ![トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](ch03/lovelive-screenshot-top.jpg)
 
-画像から推測すると、共通のヘッダー・グローバルナビゲーション・フッター以外は画像表示のみに見えます。
+画像から推測すると、共通のヘッダーやグローバルナビゲーション、フッター以外は画像表示のみに見えます。
 トップページで訴求したいことは以下のふたつになると思います。これは華やかな画像をいっぱい見られるようにする意図があると思われます。
 
 - コンテストの盛り上がり
