fix(ch0*): 事 => こと

--- a/articles/draft/ch02.md
+++ b/articles/draft/ch02.md
@@ -17,7 +17,7 @@
 
 はじめに、ソースコードを書くためのエディターもしくはIDE（統合開発環境）を用意します。
 エディターとIDEですが、エディターはIDEと比べて自分で設定できる部分が多いです。
-そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまう事もあります。
+そのため拡張性はエディターのほうが高いです。その分エディターの設定に時間がかかってしまうこともあります。
 IDEはインストールした時からある程度の設定がされています。その代わりエディターと比べて拡張性は低いです。
 
 なのでより自分好みの設定にしたい場合はエディターを、設定をいろいろいじるのが面倒な場合はIDEを使うといいです。
@@ -84,7 +84,7 @@ CSSやJavaScriptは2011年以前の情報があまり役に立ちません。
 
 ### 周りの人に聞く
 
-検索をしてもいい情報に巡りあえない事があります。その場合、周りに聞ければ聞いたほうがいいです。
+検索をしてもいい情報に巡りあえないことがあります。その場合、周りに聞ければ聞いたほうがいいです。
 
 聞く前にまずは検索したり問題の概要をまとめます。これにより聞く側にとらせる時間が少なくなります。
 聞き方としてはおそらく解答にかかるであろう時間を予測して、「『○○』について聞きたいのですが、×分ほど時間はありますか」と聞くのがいいです。
@@ -177,8 +177,8 @@ flipsnap.jsはドキュメントに次の項目がよくまとまっています
 slickを使うために[jQuery](http://jquery.com/)も使います。
 
 選定した理由は2つあります。
-ひとつめとして、ドキュメントがそろっておりカルーセルを実装する時に困らないためです。これによりやりたい事がすぐ実現できます。
-ふたつめとして、slickは開発が活発な事です。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。
+ひとつめとして、ドキュメントがそろっておりカルーセルを実装する時に困らないためです。これによりやりたいことがすぐ実現できます。
+ふたつめとして、slickは開発が活発なことです。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。
 
 なお、カルーセルでの表示に無限ループがいらなければ[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)もおすすめです。
 jQueryに依存するライブラリでは他に[Owl Carousel](http://owlgraphic.com/owlcarousel/)がよく使われます。
