fix(ch04): currentIndex() => getCurrentIndex()
https://twitter.com/GeckoTang/status/678150346271657985
https://twitter.com/GeckoTang/status/678150484662743040

--- a/articles/draft/ch04.md
+++ b/articles/draft/ch04.md
@@ -261,8 +261,8 @@ HTMLの要素を取得したらカルーセルの実装をしていきます。
 
 これらのパラメーターを元に`Carousel`関数でslickが使えるようにします。
 
-次に`currentIndex`を説明します。これはページネーションで使う関数となります。
-`currentIndex`はカルーセルでいま表示しているページがどこか示す数字を返す関数です。
+次に`getCurrentIndex`を説明します。これはページネーションで使う関数となります。
+`getCurrentIndex`はカルーセルでいま表示しているページがどこか示す数字を返す関数です。
 この実装にはslickで定義されている`slickCurrentSlide`という関数を使います。
 
 ```javascript
@@ -271,7 +271,7 @@ function Carousel(carouselElement, config) {
   carouselElement.slick(config);
 }
 
-Carousel.prototype.currentIndex = function() {
+Carousel.prototype.getCurrentIndex = function() {
   return this.carouselElement.slick("slickCurrentSlide");
 };
 ```
@@ -336,7 +336,7 @@ var carousel = new Carousel(carouselElement, {
 
 ```javascript
 var carouselPagination = new CarouselPagination(paginationElement, paginationItemElements, "ll-slides-pagination__active");
-carouselPagination.activatePage(carousel.currentIndex());
+carouselPagination.activatePage(carousel.getCurrentIndex());
 ```
 
 ## カルーセル表示が切り替わったときの処理を設定する
@@ -347,7 +347,7 @@ carouselPagination.activatePage(carousel.currentIndex());
 ```javascript
 carouselElement.on("afterChange", function() {
   carouselPagination.deactivatePage();
-  carouselPagination.activatePage(carousel.currentIndex());
+  carouselPagination.activatePage(carousel.getCurrentIndex());
 });
 ```
 
@@ -366,7 +366,7 @@ $(function() {
     carouselElement.slick(config);
   }
 
-  Carousel.prototype.currentIndex = function() {
+  Carousel.prototype.getCurrentIndex = function() {
     return this.carouselElement.slick("slickCurrentSlide");
   };
 
@@ -403,11 +403,11 @@ $(function() {
   });
 
   var carouselPagination = new CarouselPagination(paginationElement, paginationItemElements, "ll-slides-pagination__active");
-  carouselPagination.activatePage(carousel.currentIndex());
+  carouselPagination.activatePage(carousel.getCurrentIndex());
 
   carouselElement.on("afterChange", function() {
     carouselPagination.deactivatePage();
-    carouselPagination.activatePage(carousel.currentIndex());
+    carouselPagination.activatePage(carousel.getCurrentIndex());
   });
 });
 ```
