write(ch02): Nicoとslick、jQueryのダウンロードについて書いた

--- a/articles/draft/ch02.md
+++ b/articles/draft/ch02.md
@@ -93,10 +93,42 @@ CSSやJavaScriptは2011年以前の情報があまり役に立ちません。
 また聞く相手を間違えないようにします。
 たとえばプログラムのことをエンジニア以外に聞いても、ほとんどの場合は求める回答が返ってこないと思います。
 
+## ファイル構成
+
+それではいよいよサイト作成に入っていきます。はじめにファイル構成を考えます。
+今回作成するサイトのファイル構成を考えると図のようになります。
+`index.html`はトップページ、`livestage.html`はライブステージページ用のHTMLとなります。
+ディレクトリーとしては`external`・`styles`・`scripts`・`images`の4つがあり、その中に各ファイルを置く想定です。
+
+```
+/
+├- index.html
+├- livestage.html
+├- external
+├- styles
+│  └ main.css
+├- scripts
+│  └ index.js
+└- images
+   ├- image_01.jpg
+   └- ...
+```
+
+各ディレクトリーには、次の規則に則ってファイルを置きます。
+
+
+- external
+  - CSS・JavaScript問わず、ライブラリを置くディレクトリー
+- styles
+  - CSSファイルを置くディレクトリー
+- scripts
+  - JavaScriptファイルを置くディレクトリー
+- images
+  - 画像ファイルを置くディレクトリー
+
 ## ライブラリ選定
 
-ここまで開発に必要なツールや開発の際に分からないことがあったときの対処法を書きました。
-ここからは今回のサイトを実装するにあたり必要な、CSSやJavaScriptのライブラリ選定をおこなっていきます。
+ファイル構成を決めたところで、今回のサイトを実装するにあたって必要なCSSやJavaScriptのライブラリ選定をおこないます。
 
 ### ライブラリとは
 
@@ -167,6 +199,13 @@ flipsnap.jsはドキュメントに次の項目がよくまとまっています
 ラブライブ！参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。
 なので今回のために[Honoka - 日本語も美しく表示できるBootstrapテーマ](http://honokak.osaka/)を元にNicoというBootstrapのテーマを作りました。
 
+NicoはGitHubからダウンロードします。
+[https://github.com/kubosho/Nico/releases/latest](https://github.com/kubosho/Nico/releases/latest)にアクセスするとNicoの最新バージョンが表示されます。
+Downloadsを見ると図のようにzipファイルがあるのでクリックしてダウンロードします。
+ダウンロードが終わったらzipを展開して、中のファイルを`external`ディレクトリー内に入れておきます。
+
+![Nicoのダウンロード](ch02/nico.jpg)
+
 ## ライブラリの選定JavaScript編
 
 次にJavaScriptのライブラリを選定していきます。
@@ -182,5 +221,22 @@ slickを使うために[jQuery](http://jquery.com/)も使います。
 
 なお、カルーセルでの表示に無限ループがいらなければ[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)もおすすめです。
 jQueryに依存するライブラリでは他に[Owl Carousel](http://owlgraphic.com/owlcarousel/)がよく使われます。
+
+それではslickをダウンロードします。
+[http://kenwheeler.github.io/slick/](http://kenwheeler.github.io/slick/)にアクセスしたらページ上部の「get it now」をクリックします。
+すると「Download Now」というボタンが表示されるのでボタンをクリックします。するとzipファイルがダウンロードされます。
+ダウンロードが終わったらzipを展開して、中のファイルを`external`ディレクトリー内に入れておきます。
+
+![slickのダウンロード](ch02/slick.jpg)
+
+続いてjQueryもダウンロードします。
+[https://jquery.com/](https://jquery.com/)にアクセスしたら「Download jQuery」と書かれたボタンをクリックします。
+ボタンを押すと各種jQueryがダウンロードできるページに遷移します。
+何種類かリンクがあるうち「Download the compressed, production jQuery」というリンクを右クリックして「リンク先を保存」をクリックします。
+保存先は`external`ディレクトリー内に保存します。
+
+![Download jQuery](ch02/jquery-01.jpg)
+
+![production jQueryのリンク](ch02/jquery-02.jpg)
 
 これでライブラリの選定が終わりました。次章からはサイトの実装をしていきます。
