--- a/articles/draft/ch03.md
+++ b/articles/draft/ch03.md
@@ -50,7 +50,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="external/Nico/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
-  <script src="external/lory/lory.min.js" defer></script>
+  <script src="external/slick/slick.min.js" defer></script>
 </head>
 
 <body>
@@ -163,7 +163,7 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="external/Nico/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
-  <script src="external/lory/lory.min.js" defer></script>
+  <script src="external/slick/slick.min.js" defer></script>
 </head>
 
 <body>
