write(ch03): 第3章のサンプルコードに合わせてサンプルサイトを再実装した

--- a/articles/draft/ch03.md
+++ b/articles/draft/ch03.md
@@ -25,7 +25,9 @@
 ## 基本構造のマークアップ
 
 それでは実際にHTMLでサイトの構造を作っていきます。
-はじめに`DOCTYPE`というものを書きます。この`DOCTYPE`ですが、過去の経緯から書くことが必須となっています。
+はじめにHTMLファイルを`index.html`という名前で任意のディレクトリーに作ります。
+HTMLファイルを作り終わったら`DOCTYPE`というものを書きます。
+`DOCTYPE`は過去の経緯から書くことが必須となっています。
 
 `html`要素内には`head`要素と`body`要素が含まれます。
 `head`要素内には`title`要素や`meta`要素でサイト情報を書いていきます。
@@ -51,6 +53,7 @@
   <link rel="stylesheet" href="external/Nico/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
   <script src="external/slick/slick.min.js" defer></script>
+  <script src="external/scripts/main.js" defer></script>
 </head>
 
 <body>
@@ -62,7 +65,7 @@
 
 ## ヘッダーのマークアップ
 
-基礎部分のマークアップが終わったので、次にヘッダーをマークアップしていきます。
+基礎部分のマークアップが終わったので、`body`要素内にヘッダーをマークアップしていきます。
 ヘッダーにはサイトのタイトルロゴと、メールマガジンやSNS、ヘルプなどのリンクがあります。
 
 今回はCSSライブラリとしてBootstrapのテーマであるNicoを使っているため、各要素の`class`属性にBootstrapで定義されているクラス名を定義します。
@@ -101,6 +104,7 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 ## グローバルナビゲーションのマークアップ
 
 グローバルナビゲーションは、サイト内の主要なページへリンクしているものです。
+このグローバルナビゲーションを`header`要素内にマークアップしていきます。
 
 はじめに`nav`要素で全体を囲みます。`nav`要素は主要なページへリンクしている箇所で使われる要素となります。
 各要素の`class`属性にはBootstrapで定義されているクラス名を定義します。
@@ -128,6 +132,7 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 ## フッターのマークアップ
 
 フッターには著作権情報やプライバシーポリシー、サイトマップといったリンクを追加します。
+フッターも`body`要素内にマークアップしていきます。
 
 アニメのキャプチャ画像を見ると、フッター部分には「●○○○○」のような表示があります。
 これはページネーションといわれる、ある要素内にどれだけの要素が内包されているかを示すものです。
@@ -164,6 +169,7 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
   <link rel="stylesheet" href="external/Nico/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
   <script src="external/slick/slick.min.js" defer></script>
+  <script src="external/scripts/main.js" defer></script>
 </head>
 
 <body>
@@ -223,8 +229,8 @@ Bootstrapを読み込んで、Bootstrapに定義されているクラス名を`c
 
 ## ヘッダーの見た目をよくする
 
-CSSでヘッダーの下部にある隙間を無くします。
-これは`margin-bottom: 0;`とするだけで下部の隙間がなくなります。
+はじめに`index.html`が置いてあるディレクトリーと同じ場所に`styles`ディレクトリーを作り、その中にCSSファイルを`main.css`という名前で作ります。
+CSSファイルを作り終わったら、CSSでヘッダーの下部にある隙間を無くします。これは`margin-bottom: 0;`とするだけで下部の隙間がなくなります。
 
 間延びしたようなスタイルとなっているロゴ部分のスタイルも調整します。
 これは要素の高さ調整と`margin`・`padding`を使って要素内外にある隙間を調整すれば、間延びした見た目ではなくなります。
@@ -274,15 +280,41 @@ CSSでヘッダーの下部にある隙間を無くします。
   color: #fff;
   text-transform: uppercase;
 }
-/* 横幅が768px以上のときの設定 */
+```
+
+ウィンドウ幅を狭めたときにグローバルナビゲーションの表示が崩れないよう、各ウィンドウ幅ごとにスタイルを定義しておきます。
+主に要素の内側の余白を細かく定義します。
+
+```css
+/* グローバルナビゲーションの各ウィンドウ幅ごとのスタイル定義 */
 @media (min-width: 768px) {
   #ll-nav li > a {
-    padding: 0.75em 5em;
+    padding: 0.75em 1.5em;
     border-right: 1px solid #fff;
   }
 
   #ll-nav li:first-child > a {
     border-left: 1px solid #fff;
+  }
+}
+@media (min-width: 890px) {
+  #ll-nav li > a {
+    padding: 0.75em 2em;
+  }
+}
+@media (min-width: 992px) {
+  #ll-nav li > a {
+    padding: 0.75em 2.5em;
+  }
+}
+@media (min-width: 1150px) {
+  #ll-nav li > a {
+    padding: 0.75em 3.2em;
+  }
+}
+@media (min-width: 1330px) {
+  #ll-nav li > a {
+    padding: 0.75em 4em;
   }
 }
 ```
@@ -302,8 +334,7 @@ CSSでヘッダーの下部にある隙間を無くします。
 }
 ```
 
-最後に現在開いているページをグローバルナビゲーション上で分かりやすくするため、下部に黄色の線を引きます。
-これで共通構造のマークアップは終わりです。
+現在開いているページをグローバルナビゲーション上で分かりやすくするため、下部に黄色の線を引きます。
 
 ```css
 /* グローバルナビゲーションの現在位置を示すスタイル */
@@ -317,6 +348,20 @@ CSSでヘッダーの下部にある隙間を無くします。
   border-bottom: 5px solid #ffdc00;
 }
 ```
+
+## フッターの見た目をよくする
+
+最後にフッターへスタイルを適用します。
+Bootstrapで定義されている要素外側の余白を打ち消します。
+
+```css
+/* サイトのフッター */
+#ll-footer {
+  margin-bottom: 0;
+}
+```
+
+これで共通構造のマークアップは終わりです。
 
 ## CSSのまとめ
 
@@ -355,15 +400,35 @@ CSSでヘッダーの下部にある隙間を無くします。
   color: #fff;
   text-transform: uppercase;
 }
-/* 横幅が768px以上のときの設定 */
+/* グローバルナビゲーションの各ウィンドウ幅ごとのスタイル定義 */
 @media (min-width: 768px) {
   #ll-nav li > a {
-    padding: 0.75em 5em;
+    padding: 0.75em 1.5em;
     border-right: 1px solid #fff;
   }
 
   #ll-nav li:first-child > a {
     border-left: 1px solid #fff;
+  }
+}
+@media (min-width: 890px) {
+  #ll-nav li > a {
+    padding: 0.75em 2em;
+  }
+}
+@media (min-width: 992px) {
+  #ll-nav li > a {
+    padding: 0.75em 2.5em;
+  }
+}
+@media (min-width: 1150px) {
+  #ll-nav li > a {
+    padding: 0.75em 3.2em;
+  }
+}
+@media (min-width: 1330px) {
+  #ll-nav li > a {
+    padding: 0.75em 4em;
   }
 }
 
@@ -385,6 +450,11 @@ CSSでヘッダーの下部にある隙間を無くします。
   left: 0;
   width: 100%;
   border-bottom: 5px solid #ffdc00;
+}
+
+/* サイトのフッター */
+#ll-footer {
+  margin-bottom: 0;
 }
 ```
 
