chore(ch03): 段落に改行を追加

--- a/articles/draft/ch03.md
+++ b/articles/draft/ch03.md
@@ -234,7 +234,8 @@ Bootstrapを読み込んで、Bootstrapに定義されているクラス名を`c
 ## ヘッダーの見た目をよくする
 
 はじめに`index.html`が置いてあるディレクトリーと同じ場所に`styles`ディレクトリーを作り、その中にCSSファイルを`main.css`という名前で作ります。
-CSSファイルを作り終わったら、CSSでヘッダーの下部にある隙間を無くします。これは`margin-bottom: 0;`とするだけで下部の隙間がなくなります。
+CSSファイルを作り終わったら見た目を整えていきます。
+CSSでヘッダーの下部にある隙間を無くします。これは`margin-bottom: 0;`とするだけで下部の隙間がなくなります。
 
 間延びしたようなスタイルとなっているロゴ部分のスタイルも調整します。
 これは要素の高さ調整と`margin`・`padding`を使って要素内外にある隙間を調整すれば、間延びした見た目ではなくなります。
