write(ch05): main要素は除く旨を追記した

--- a/articles/draft/ch05.md
+++ b/articles/draft/ch05.md
@@ -96,7 +96,7 @@ YouTubeの動画をページ内へ埋め込む方法は図のようにYouTubeの
 </div>
 ```
 
-最後に今まで書いたHTMLの全体を次のHTMLで囲ったら完成です。
+最後に今まで書いたHTMLの全体（`main`要素は除く）を次のHTMLで囲ったら完成です。
 
 ```html
 <div class="container-fluid">
