write(ch0*): Re:VIEWファイルを編集してHTML・PDFの見た目を整えた

--- a/test/ch01.md
+++ b/test/ch01.md
@@ -46,12 +46,12 @@
 
 ### 今回の要素について整理
 
-アニメのキャプチャ画像から、サイトを構成する要素について分析してみます。
+アニメのキャプチャ画像（図1）から、サイトを構成する要素について分析してみます。
 
 
-![サイトトップ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](images/ch01/lovelive-screenshot-top.jpg)
+![トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](images/ch01/lovelive-screenshot-top.jpg)
 
-まず、グローバルナビゲーションに表示されている内容は以下のとおりとなります。
+グローバルナビゲーションに表示されている内容は次のとおりとなります。
 
 
 * TOP
@@ -72,7 +72,7 @@
 
 #### LIVE STAGE
 
-ラブライブ！の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。これは一体どういうことでしょうか？これは参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、以下の要素で構成されているように見えます。
+ラブライブ！の状況をネットで生中継するページだと思われます。参加するアイドルグループが見る、OUTLINEやSCHEDULEより左に位置しています。これは一体どういうことでしょうか？これは参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。ライブステージページ内にある要素をアニメのキャプチャ画像から推測してみると、次の要素で構成されているように見えます。
 
 
 * 映像タイトル
@@ -112,7 +112,7 @@
 
 よくある質問やお問い合わせなどが掲載されていると思われます。
 
-以上の要件定義、要素整理に基づき、サイトマップと仕様書を作成していきます。
+以上の要件定義、要素整理をしたものが図2です。これに基づき、サイトマップと仕様書を作成していきます。
 
 
 ![要素整理](images/ch01/01.jpg)
@@ -126,11 +126,11 @@
 
 ### 今回のサイトマップについて
 
-要件整理をきちんとまとめれば、サイトマップはほぼ考えずに作れると思います。今回作るのはトップとライブステージページの2ページです。またライブステージページ内にポップアップ画面を設計しました。
+要件をきちんと整理していれば、サイトマップはほぼ考えずに作れると思います。今回作るのはトップページとライブステージページの2ページです。またライブステージページ内にポップアップ画面を設計しました。
 
-一番上層のページをトップとして下層にライブステージページを書きます。他に外部リンクであるSNSボタンをつけて完成です。今回は極めて簡単な内容のためこれで終わりです。
+最上層のページをトップページとして下層にライブステージページを書きます。他に外部リンクであるSNSボタンをつけて完成です。今回は極めて簡単な内容のためこれで終わりです。
 
-本来は各下層ページにさらなる下層ページがある、サイトのあらゆる表示可能なページ（ポップアップやエラーページなど）を全部作らないといけません。そのためExcelに起こす前の段階で紙へ下書きを書いたほうがいいです。
+本来はサイトの表示可能なページ（ポップアップやエラーページなど）を全部作らないといけません。そのためExcelに起こす前の段階で紙へ下書きを書いたほうがいいです（図3）。
 
 
 ![サイトマップ](images/ch01/02.jpg)
@@ -157,9 +157,12 @@
 
 ### トップページのワイヤーフレームと仕様
 
-![トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](images/ch01/lovelive-screenshot-top.jpg)
+図4から推測すると、共通のヘッダーやグローバルナビゲーション、フッター以外は画像表示のみに見えます。
 
-画像から推測すると、共通のヘッダーやグローバルナビゲーション、フッター以外は画像表示のみに見えます。トップページで訴求したいことは以下のふたつになると思います。これは華やかな画像をいっぱい見られるようにする意図があると思われます。
+
+![トップページ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！](images/ch01/lovelive-screenshot-top-02.jpg)
+
+トップページで訴求したいことは以下のふたつになると思います。これは華やかな画像をいっぱい見られるようにする意図があると思われます。
 
 
 * コンテストの盛り上がり
@@ -167,31 +170,34 @@
 
 画像の表示方法はカルーセルということが分かります。カルーセルは[Nike](http://www.nike.com/jp/ja_jp/)などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
 
-またアニメのキャプチャ画像を見ると共通フッター内にはカルーセルと連携しそうなドットがあります。しかしこの見た目は現実だと採用される可能性が極めて低いものです。ライブステージページもドットが共通フッター内にあります。これも映像を見るページで普通こういう表示はしません。そのため考えた結果として、トップページだけ画像をカルーセルで表示するようにしました。
+またアニメのキャプチャ画像を見ると共通フッター内にはカルーセルと連携しそうなドットがあります。しかしこの見た目は現実だと採用される可能性が極めて低いものです。ライブステージページもドットが共通フッター内にあります。これも映像を見るページで普通こういう表示はしません。そのため考えた結果として、トップページだけ画像をカルーセルで表示するようにしました。これらをまとめたのが図5となります。
 
 
 ![トップページのワイヤーフレーム](images/ch01/03.jpg)
 
 ### ライブステージページのワイヤーフレームと仕様
 
+続いて図6のキャプチャ画像を元にライブステージページの仕様を推測します。
+
+
 ![ライブステージページ（ラブライブ！第2期 3話より）© プロジェクトラブライブ！](images/ch01/lovelive-screenshot-livestage.jpg)
 
-アニメのキャプチャ画像から推測すると、共通要素を除けば「ニコニコ動画」の仕様に似ています。生中継はもちろん映像が中心と思われます。他の機能については映像と関連するものという想定です。
+キャプチャ画像から推測すると、共通要素を除けば「ニコニコ動画」の仕様に似ています。生中継はもちろん映像が中心と思われます。他の機能については映像と関連するものという想定です。
 
 映像エリアの隣に広告スペースが見えます。おそらくここに広告が掲載されるでしょう。
 
-また本来は「ニコニコ動画」のようなコメント機能があると思われます。今回は工数が足りないため少し改造しSNSコメントという似ている機能へ変更しました。「何かをコメントする」体験は変えず、より工数の少ないものに変えられたと思います。
+また本来は「ニコニコ動画」のようなコメント機能があると思われます。今回は工数が足りないため少し改造しSNSコメントという似ている機能へ変更しました。「何かをコメントする」体験は変えず、より工数の少ないものに変えられたと思います。これらをまとめたのが図7となります。
 
 
 ![ライブステージページのワイヤーフレーム](images/ch01/04.jpg)
 
 ### ほかポップアップ
 
-サイトマップのところで書きましたがエラーページも想定しました。ただしエラーページの検証はエラーが発生しない限りできません。そのためエラーページの代わりに「まだ作ってない」というポップアップを用意しました。
+サイトマップのところで書きましたがエラーページも想定しました。ただしエラーページの検証はエラーが発生しない限りできません。そのためエラーページの代わりに「まだ作ってない」というポップアップを用意しました（図8）。
 
-他のポップアップとしてはSNSコメントポップアップを用意しました。用意した理由は映像内のコメントを擬似的に再現するためです。
+他のポップアップとしてはSNSコメントポップアップを用意しました。用意した理由は映像内のコメントを擬似的に再現するためです（図9）。
 
-また投票結果を再現するために投票結果ポップアップも作りました。
+また投票結果を再現するために投票結果ポップアップも作りました（図10）。
 
 これらのポップアップはページとして存在しないため、サイトマップでは仕様をページと区別して反映しました。
 
@@ -218,21 +224,17 @@
 
 ### 著作権
 
-またサイト上で使う画像についても注意が必要です。[著作権法 第三十条](http://law.e-gov.go.jp/htmldata/S45/S45HO048.html#1000000000002000000003000000005000000000000000000000000000000000000000000000000)には、次のような記述があります。
+またサイト上で使う画像についても注意が必要です。著作権法[^著作権法] 第三十条には次の記述があります。
 
+[^著作権法]: http://law.e-gov.go.jp/htmldata/S45/S45HO048.html
 
 > 著作権の目的となつている著作物（以下この款において単に「著作物」という。）は、個人的に又は家庭内その他これに準ずる限られた範囲内において使用すること（以下「私的使用」という。）を目的とするときは、次に掲げる場合を除き、その使用する者が複製することができる。
-> 
-> 
 
-たとえばPCの壁紙として、著作権情報が載っている画像を使ったとしてもそれは問題になりません。私的利用の範囲になるためです。しかしインターネット上などで公開するために使った場合、[著作権法　第二十三条](http://law.e-gov.go.jp/htmldata/S45/S45HO048.html#1000000000002000000003000000003000000000000000000000000000000000000000000000000)の公衆送信権を侵害します。
+たとえばPCの壁紙として、著作権情報が載っている画像を使ったとしてもそれは問題になりません。私的利用の範囲になるためです。しかしインターネット上などで公開するために使った場合、著作権法 第二十三条の公衆送信権を侵害します。
 
-またイラストをトレースし自分流に編集して公開する場合も問題となる場合があります。このあたりは次の記事を見るといいでしょう。
+またイラストをトレースし自分流に編集して公開する場合も問題となる場合があります。このあたりは「大人気ゲーム「刀剣乱舞」に「トレパク」疑惑が続々浮上——どんな問題があるのか？|弁護士ドットコムニュース[^trace]」を見るといいでしょう。
 
-
-> [大人気ゲーム「刀剣乱舞」に「トレパク」疑惑が続々浮上——どんな問題があるのか？|弁護士ドットコムニュース](http://www.bengo4.com/houmu/17/1263/n_3282/)
-> 
-> 
+[^trace]: http://www.bengo4.com/houmu/17/1263/n_3282/
 
 なおこの「サイト制作のSTART:DASH!!」は文章部分をクリエイティブ・コモンズの表示・非営利・継承4.0国際ライセンスで提供しています。このライセンスは次の3つを満たすことにより文章部分を自由に使うことができます。
 
@@ -241,20 +243,29 @@
 * 非営利である
 * 同じライセンスを適用する
 
-クリエイティブ・コモンズのライセンスは取り消せないため、ライセンスを付ける前に[CCライセンス・バージョン4.0 日本語版の公開 | クリエイティブ・コモンズ・ジャパン](http://creativecommons.jp/2015/07/15/cc%E3%83%A9%E3%82%A4%E3%82%BB%E3%83%B3%E3%82%B9%E3%83%BB%E3%83%90%E3%83%BC%E3%82%B8%E3%83%A7%E3%83%B34-0-%E6%97%A5%E6%9C%AC%E8%AA%9E%E7%89%88%E3%81%AE%E5%85%AC%E9%96%8B/)からリーガルコードを読んで理解する必要があります。クリエイティブ・コモンズについては[クリエイティブ・コモンズ｜商用利用でトラブルを避ける全知識](http://liskul.com/cr_ccnotrouble-4194)という記事が分かりやすいです。
+クリエイティブ・コモンズのライセンスは取り消せないため、ライセンスを付ける前に「CCライセンス・バージョン4.0 日本語版の公開 | クリエイティブ・コモンズ・ジャパン[^creative-commons-site]」からリーガルコードを読んで理解する必要があります。クリエイティブ・コモンズについては「クリエイティブ・コモンズ｜商用利用でトラブルを避ける全知識[^creative-commons-article]」という記事が分かりやすいです。
 
+[^creative-commons-site]: http://creativecommons.jp/2015/07/15/ccライセンス・バージョン4-0-日本語版の公開/
+
+[^creative-commons-article]: http://liskul.com/cr_ccnotrouble-4194
 
 ### イラストや素材を自作できない場合どうしたらいいか？
 
 とはいえ、イラストや素材を自作できない場合、サイトが殺風景な見た目になりがちです。その場合は写真素材サイトを使うことで解決できます。写真素材サイトの一例として次のサイトがあります。
 
 
-* ぱくたそ
+* ぱくたそ[^pakutaso]
   * 商用利用可かつクレジット表記が不要なサイト
-* GIRLY DROP（ガーリードロップ）
+* GIRLY DROP（ガーリードロップ）[^girlydrop]
   * 女性向けの写真素材サイト
-* タダピク
+* タダピク[^tadapic]
   * 商用利用可かつ、クレジット表記が不要とうたっているサイトを横断的に検索できるサイト
+
+[^pakutaso]: https://www.pakutaso.com/
+
+[^girlydrop]: http://girlydrop.com/
+
+[^tadapic]: http://www.tadapic.com/
 
 写真素材サイトを使うことで、高品質な写真が使えます。ただし写真を使うときは各写真素材サイトの注意項目を読んだ上で、それに沿って使う必要があります。
 
