--- a/test/ch03.md
+++ b/test/ch03.md
@@ -1,12 +1,12 @@
 
-# トップ・ライブステージページ共通の構造を作る
+# トップページ・ライブステージページ共通の構造を作る
 
-いよいよ、サイトを作っていきます。まずはサイト共通の構造をトップとライブステージページから洗い出し、それをマークアップしていきます。
+いよいよ、サイトを作っていきます。まずはサイト共通の構造をトップページとライブステージページから洗い出し、それをマークアップしていきます。
 
 
 ## 共通の構造を洗い出し
 
-トップやライブステージページのアニメキャプチャ画像から共通構造を抜き出すと、次に挙げる3つが共通構造となります。
+トップページ（図1）やライブステージページ（図2）のアニメキャプチャ画像から共通構造を抜き出すと、次に挙げる3つが共通構造となります。
 
 
 * ヘッダー
@@ -32,13 +32,14 @@
 
 `body`要素内にはこのページの内容を書いていきます。`body`要素内にある`main`要素はサイトの主要な内容を示すものとなります。
 
-なお`main`要素で`role`属性の値に`main`を指定していますが、これは[IE11がmain要素をサポートしていない](http://caniuse.com/#feat=html5semantic)ためです。そのため`role`属性で`main`を指定して、サイトの主要な内容だということをIE11にも伝える意図で指定しています。
+なお`main`要素で`role`属性の値に`main`を指定していますが、これはIE11がmain要素をサポートしていない[^html5semantic]ためです。そのため`role`属性で`main`を指定して、サイトの主要な内容だということをIE11にも伝える意図で指定しています。
 
-このHTMLを基礎として、肉付けしていきます。
+[^html5semantic]: http://caniuse.com/#feat=html5semantic
 
+このHTMLを基礎として肉付けしていきます（リスト1）。
 
-
-```html
+リスト3.1 基本となるHTML
+```
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -66,11 +67,10 @@
 
 基礎部分のマークアップが終わったので、`body`要素内にヘッダーをマークアップしていきます。ヘッダーにはサイトのタイトルロゴと、メールマガジンやSNS、ヘルプなどのリンクがあります。
 
-今回はCSSライブラリとしてBootstrapのテーマであるNicoを使っているため、各要素の`class`属性にBootstrapで定義されているクラス名を定義します。
+今回はCSSライブラリとしてBootstrapのテーマであるNicoを使っているため、各要素の`class`属性にBootstrapで定義されているクラス名を定義します（リスト2）。
 
-
-
-```html
+リスト3.2 ヘッダーのHTML
+```
 <header id="ll-header" class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -86,20 +86,16 @@
   </div>
 </header>
 ```
+作らないページについては、リスト3のように`a`要素の`href`属性に`#`を入れておきます。こうすることで、作っていないページの検索が楽になることを狙っています。
 
-作らないページについては、図のように`a`要素の`href`属性に`#`を入れておきます。こうすることで、作っていないページの検索が楽になることを狙っています。
-
-
-
-```html
+リスト3.3 作らないページはhref属性の値に#を入れておく
+```
 <a href="#">Mail magazine</a>
 ```
+Bootstrapにはないクラス名を定義する際、リスト4のように`ll-`という接頭辞を付けています（**l** ove **l** ive）。これはBootstrapで定義されているクラス名と競合しないように、安全策で接頭辞を付けています。
 
-Bootstrapにはないクラス名を定義する際、図のように`ll-`という接頭辞を付けています（**l** ove **l** ive）。これはBootstrapで定義されているクラス名と競合しないように、安全策で接頭辞を付けています。
-
-
-
-```html
+リスト3.4 ll-という接頭辞を付けている
+```
 <h1 class="navbar-brand ll-logo">LoveLive!</h1>
 ```
 
@@ -109,11 +105,10 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 
 はじめに`nav`要素で全体を囲みます。`nav`要素は主要なページへリンクしている箇所で使われる要素となります。各要素の`class`属性にはBootstrapで定義されているクラス名を定義します。先ほどと同じく今回作らないページについては、図のように`a`要素の`href`属性に`#`を入れておきます。
 
-現在見ているページを示すためのクラス名として、Top部分に`ll-active`というクラス名を付けています。`ll-active`内でBootstrapが`active`に対してスタイル定義しているところを上書きします。
+現在見ているページを示すためのクラス名として、Top部分に`ll-active`というクラス名を付けています。`ll-active`内でBootstrapが`active`に対してスタイル定義しているところを上書きします（リスト5）。
 
-
-
-```html
+リスト3.5 グローバルナビゲーションのHTML
+```
 <nav id="ll-nav" class="navbar navbar-inverse">
   <div class="container-fluid">
     <ul class="nav navbar-nav">
@@ -133,11 +128,10 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 
 フッターには著作権情報やプライバシーポリシー、サイトマップといったリンクを追加します。フッターも`body`要素内にマークアップしていきます。
 
-アニメのキャプチャ画像を見ると、フッター部分には「●○○○○」のような表示があります。これはページネーションといわれる、ある要素内にどれだけの要素が内包されているかを示すものです。しかしフッター内にページネーションを含めるのは一般的でないため、特にマークアップしません。
+アニメのキャプチャ画像を見ると、フッター部分には「●○○○○」のような表示があります。これはページネーションといわれる、ある要素内にどれだけの要素が内包されているかを示すものです。しかしフッター内にページネーションを含めるのは一般的でないため、特にマークアップしません（リスト6）。
 
-
-
-```html
+リスト3.6 フッターのHTML
+```
 <footer id="ll-footer" class="navbar navbar-default">
   <div class="container-fluid">
     <p class="nav navbar-text navbar-left">
@@ -154,11 +148,10 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 
 ## HTMLのまとめ
 
-ここまでをまとめると、次のHTMLになります。
+ここまでをまとめると、リスト7のHTMLになります。
 
-
-
-```html
+リスト3.7 共通部分のHTML
+```
 <!DOCTYPE html>
 <html>
 <head>
@@ -223,8 +216,7 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 </body>
 </html>
 ```
-
-スクリーンショットは次のとおりになります。Bootstrapを読み込んで、Bootstrapに定義されているクラス名を`class`属性へ書いていたため、それなりの見た目になっています。しかし見た目がアニメのキャプチャ画像と違うところがあるため、CSSで微調整をしていきます。
+スクリーンショットは図3のとおりになります。Bootstrapを読み込んで、Bootstrapに定義されているクラス名を`class`属性へ書いていたため、それなりの見た目になっています。しかし見た目がアニメのキャプチャ画像と違うところがあるため、CSSで微調整をしていきます。
 
 
 ![HTMLだけで作ったサイト](images/ch03/common-html.jpg)
@@ -233,11 +225,10 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 
 はじめに`index.html`が置いてあるディレクトリーと同じ場所に`styles`ディレクトリーを作り、その中にCSSファイルを`main.css`という名前で作ります。CSSファイルを作り終わったら見た目を整えていきます。CSSでヘッダーの下部にある隙間を無くします。これは`margin-bottom: 0;`とするだけで下部の隙間がなくなります。
 
-間延びしたようなスタイルとなっているロゴ部分のスタイルも調整します。これは要素の高さ調整と`margin`・`padding`を使って要素内外にある隙間を調整すれば、間延びした見た目ではなくなります。
+間延びしたようなスタイルとなっているロゴ部分のスタイルも調整します。これは要素の高さ調整と`margin`・`padding`を使って要素内外にある隙間を調整すれば、間延びした見た目ではなくなります（リスト8）。
 
-
-
-```css
+リスト3.8 ヘッダーのCSS
+```
 /* サイトのヘッダー */
 #ll-header {
   margin-bottom: 0;
@@ -255,11 +246,10 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 
 グローバルナビゲーションへスタイルを適用します。グローバルナビゲーションは、Bootstrapのスタイル定義をそのまま使った場合、高さがそれなりにあります。これをラブライブ！参加者募集サイトの見た目に合わせるため、`min-height: 0;`と指定して、グローバルナビゲーションの高さを狭めておきます。
 
-今回のラブライブ！参加者募集サイトは、全て大文字でグローバルナビゲーション内の文字が書かれています。そのためグローバルナビゲーション内の各要素に対し`text-transform: uppercase;`と指定して、グローバルナビゲーション内の文字を全て大文字にします。他のスタイル定義に関しては、Bootstrapで定義されているスタイルを打ち消すための指定となります。
+今回のラブライブ！参加者募集サイトは、全て大文字でグローバルナビゲーション内の文字が書かれています。そのためグローバルナビゲーション内の各要素に対し`text-transform: uppercase;`と指定して、グローバルナビゲーション内の文字を全て大文字にします。他のスタイル定義に関しては、Bootstrapで定義されているスタイルを打ち消すための指定となります（リスト9）。
 
-
-
-```css
+リスト3.9 グローバルナビゲーションのCSS
+```
 /* サイトのグローバルナビゲーション */
 #ll-nav {
   min-height: 0;
@@ -281,12 +271,10 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
   text-transform: uppercase;
 }
 ```
+ウィンドウ幅を狭めたときにグローバルナビゲーションの表示が崩れないよう、各ウィンドウ幅ごとにスタイルを定義しておきます。主に要素の内側の余白を細かく定義します（リスト10）。
 
-ウィンドウ幅を狭めたときにグローバルナビゲーションの表示が崩れないよう、各ウィンドウ幅ごとにスタイルを定義しておきます。主に要素の内側の余白を細かく定義します。
-
-
-
-```css
+リスト3.10 ウィンドウ幅を狭めたときにグローバルナビゲーションの表示が崩れないようにする
+```
 /* グローバルナビゲーションの各ウィンドウ幅ごとのスタイル定義 */
 @media (min-width: 768px) {
   #ll-nav li > a {
@@ -319,13 +307,11 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
   }
 }
 ```
+元のデザインに合わせるため、現在開いているページを示すセレクター（`.ll-active`）に対し、背景色や前景色を指定します。さらに選択できないことを示すため`cursor: default;`としてマウスカーソルの形を矢印にします。またリンクをマウスカーソルで押したらリンク先に飛ぶというマウスイベントが起こらないように、`pointer-events: none;`の指定でマウスイベント無効化をします（リスト11）。
 
-元のデザインに合わせるため、現在開いているページを示すセレクター（`.ll-active`）に対し、背景色や前景色を指定します。さらに選択できないことを示すため`cursor: default;`としてマウスカーソルの形を矢印にします。またリンクをマウスカーソルで押したらリンク先に飛ぶというマウスイベントが起こらないように、`pointer-events: none;`の指定でマウスイベント無効化をします。
-
-
-
-```css
-/* グローバルナビゲーションの現在位置のスタイルを改善する */
+リスト3.11 グローバルナビゲーション上で現在見ているページはクリックできないようにする
+```
+/* グローバルナビゲーション上で現在見ているページはクリックできないようにする */
 #ll-nav .ll-active > a {
   position: relative;
   cursor: default;
@@ -334,13 +320,11 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
   color: #fff;
 }
 ```
+現在開いているページをグローバルナビゲーション上で分かりやすくするため、下部に黄色の線を引きます（リスト12）。
 
-現在開いているページをグローバルナビゲーション上で分かりやすくするため、下部に黄色の線を引きます。
-
-
-
-```css
-/* グローバルナビゲーションの現在位置を示すスタイル */
+リスト3.12 グローバルナビゲーション上で現在見ているページを分かりやすくする
+```
+/* グローバルナビゲーション上で現在見ているページを分かりやすくする */
 #ll-nav .ll-active > a::after {
   content: "";
   display: block;
@@ -354,27 +338,22 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
 
 ## フッターの見た目をよくする
 
-最後にフッターへスタイルを適用します。Bootstrapで定義されている要素外側の余白を打ち消します。
+最後にフッターへスタイルを適用します。Bootstrapで定義されている要素外側の余白を打ち消します（リスト13）。
 
-
-
-```css
+リスト3.13 フッターのCSS
+```
 /* サイトのフッター */
 #ll-footer {
   margin-bottom: 0;
 }
 ```
 
-これで共通構造のマークアップは終わりです。
-
-
 ## CSSのまとめ
 
-ここまでをまとめると、次のCSSになります。
+ここまでをまとめると、リスト14のCSSになります。
 
-
-
-```css
+リスト3.14 共通部分のCSS
+```
 /* サイトのヘッダー */
 #ll-header {
   margin-bottom: 0;
@@ -464,8 +443,7 @@ Bootstrapにはないクラス名を定義する際、図のように`ll-`とい
   margin-bottom: 0;
 }
 ```
-
-スクリーンショットは次のとおりになります。細部は違いますが、CSSでいろいろ調整した分、元のアニメキャプチャ画像に似てきたと思います。
+スクリーンショットは図4のとおりになります。細部は違いますが、CSSでいろいろ調整した分、元のアニメキャプチャ画像に似てきたと思います。
 
 
 ![CSSで調整したサイト](images/ch03/common-elements.jpg)
