--- a/test/ch02.md
+++ b/test/ch02.md
@@ -22,8 +22,17 @@
 
 なのでより自分好みの設定にしたい場合はエディターを、設定をいろいろいじるのが面倒な場合はIDEを使うといいです。
 
-エディターはWindowsとOS X共にAtomやSublime Textがよく使われています。IDEはWebStormやNetBeans、Visual Studio Community Editionがよく使われています。
+エディターはWindowsとOS X共にAtom[^atom]やSublime Text[^sublimetext]がよく使われています。IDEはWebStorm[^webstorm]やNetBeans[^netbeans]、Visual Studio Community Edition[^visualstudio]がよく使われています。
 
+[^atom]: https://atom.io/
+
+[^sublimetext]: http://www.sublimetext.com/3
+
+[^webstorm]: https://www.jetbrains.com/webstorm/
+
+[^netbeans]: https://ja.netbeans.org/
+
+[^visualstudio]: https://www.visualstudio.com/ja-jp/products/visual-studio-community-vs.aspx
 
 ### ブラウザー
 
@@ -42,8 +51,11 @@
 
 ### GitとGitHub
 
-最後に、作業履歴を管理するためGitとGitHubを用意します。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。そのときGitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTreeをダウンロードして使うのがいいでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Gitを読んでみてください。
+最後に、作業履歴を管理するためGitとGitHubを使います。たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。そのときGitに作業履歴が残っていれば、かなり前の作業まで遡ってしまうことが少なくなります。GitはSourceTree[^sourcetree]をダウンロードして使うのがいいでしょう。もしGitについてあまり知らない場合は、拙著のSteins;Git[^steinsgit]を読んでみてください。
 
+[^sourcetree]: https://ja.atlassian.com/software/sourcetree/overview
+
+[^steinsgit]: http://o2project.github.io/steins-git
 
 ## 分からないことがあったときには？
 
@@ -58,16 +70,17 @@
 
 まずは検索します。検索したときに結果が出やすい手法はいくつかあります。
 
-はじめに、`CSSで背景色をつけるやり方`と検索するより、`CSS 背景色 やり方`のように単語で区切るほうが検索結果の件数は増えます。検索エンジンは`CSSで背景色をつけるやり方`のような文章が苦手です。そのため文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。
+はじめに「CSSで背景色をつけるやり方」と検索するより、「CSS 背景色 やり方」のように単語で区切るほうが検索結果の件数は増えます。検索エンジンは「CSSで背景色をつけるやり方」のような文章が苦手です。そのため文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。
 
-また、より入門的な内容を探したい場合`○○ とは`で検索するのがいいです。理由は入門的な記事のタイトルが`○○ とは`と書く傾向にあるためです。たとえばJavaScriptの初心者向け記事を探したい場合は`JavaScript とは`といった感じで検索します。
+また、より入門的な内容を探したい場合「○○ とは」で検索するのがいいです。理由は入門的な記事のタイトルが「○○ とは」と書く傾向にあるためです。たとえばJavaScriptの初心者向け記事を探したい場合は「JavaScript とは」といった感じで検索します。
 
-次に、JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索することです。エラーメッセージをそのまま検索することで、解決方法が出てきやすいです。しかしだいたい英語（そしてほとんどStack Overflowというサイト）なので、そこは頑張って内容を読み取るしかないです。
+次に、JavaScriptでエラーメッセージが出力された場合、エラーメッセージをそのまま検索することです。エラーメッセージをそのまま検索することで、解決方法が出てきやすいです。しかしだいたい英語なので、そこは頑張って内容を読み取るしかないです。
 
-最後に、Google検索結果内の`検索ツール - 期間指定`を使ってなるべく新しい情報のみ検索します。CSSやJavaScriptは2011年以前の情報があまり役に立ちません。期間を絞ることで新しい情報にたどりつきやすくします。
+最後に、Google検索結果内の「検索ツール - 期間指定」を使ってなるべく新しい情報のみ検索します。CSSやJavaScriptは2011年以前の情報があまり役に立ちません。期間を絞ることで新しい情報にたどりつきやすくします。
 
-しかし、初期状態では期間設定の使い勝手があまりよくありません。具体的には期間設定が`1ヶ月`の後は`1年`となってしまうため`3ヶ月以内`などは指定できません。これに関しては[Add Search Options](https://chrome.google.com/webstore/detail/add-search-options/kaifgnoibnjldmdkkfogenbfbfgcbiao?hl=ja)というGoogle Chrome拡張機能を使います。この拡張機能を使うことにより、期間指定に`3ヶ月以内`と`6ヶ月以内`が増えます。
+しかし、初期状態では期間設定の使い勝手があまりよくありません。具体的には期間設定が「1ヶ月」の後は「1年」となってしまうため「3ヶ月以内」などは指定できません。これに関してはAdd Search Options[^search-options]というGoogle Chrome拡張機能を使います。この拡張機能を使うことにより、期間指定に「3ヶ月以内」と「6ヶ月以内」が増えます。
 
+[^search-options]: https://chrome.google.com/webstore/detail/add-search-options/kaifgnoibnjldmdkkfogenbfbfgcbiao
 
 ### 周りの人に聞く
 
@@ -80,9 +93,9 @@
 
 ## ファイル構成
 
-それではいよいよサイト作成に入っていきます。はじめにファイル構成を考えます。今回作成するサイトのファイル構成を考えると図のようになります。`index.html`はトップページ、`livestage.html`はライブステージページ用のHTMLとなります。ディレクトリーとしては`external`・`styles`・`scripts`・`images`の4つがあり、その中に各ファイルを置く想定です。
+それではいよいよサイト作成に入っていきます。はじめにファイル構成を考えます。今回作成するサイトのファイル構成を考えるとリスト1のようになります。`index.html`はトップページ、`livestage.html`はライブステージページ用のHTMLとなります。ディレクトリーとしては`external`・`styles`・`scripts`・`images`の4つがあり、その中に各ファイルを置く想定です。
 
-
+リスト2.1 今回のファイル構成
 ```
 /
 ├- index.html
@@ -96,7 +109,6 @@
    ├- image_01.jpg
    └- ...
 ```
-
 各ディレクトリーには、次の規則に則ってファイルを置きます。
 
 
@@ -118,8 +130,9 @@
 
 ライブラリという聞き慣れない単語が出て「??」となった人もいるかもしれません。選定の前にライブラリについて説明します。
 
-ライブラリは、汎用性が高いプログラムを他のプログラムからも使えるようにひとまとまりとしたものです。たとえばCSSであればBootstrapやFoundation、JavaScriptでいえばjQueryなどがライブラリです。いまあなたが見ているこの文章も、自動的に日本語の文章をチェックする[textlint](https://github.com/textlint/textlint)というライブラリを使い、自動校正しながら書いています。
+ライブラリは、汎用性が高いプログラムを他のプログラムからも使えるようにひとまとまりとしたものです。たとえばCSSであればBootstrap、JavaScriptでいえばjQueryなどがライブラリです。いまあなたが見ているこの文章も、自動的に日本語の文章をチェックするtextlint[^textlint]というライブラリを使い、自動校正しながら書いています。
 
+[^textlint]: https://github.com/textlint/textlint
 
 ### ライブラリを選ぶ基準
 
@@ -130,7 +143,13 @@
 
 はじめに、そのライブラリが広く使われているかを見ます。広く使われていれば、ライブラリを使う上で何か困って検索をしたときに情報が出てきやすいためです。
 
-たとえばCSSのライブラリである[Bootstrap](http://getbootstrap.com/)だとページ下部にBootstrapを使ったサイト一覧が掲載されています。JavaScriptのライブラリである[jQuery](http://jquery.com/)は[Amazon上でjQueryで検索](http://www.amazon.co.jp/s/field-keywords=jquery)するとjQuery関連の本が大量に表示されます。
+たとえばCSSのライブラリであるBootstrap[^bootstrap]だとページ下部にBootstrapを使ったサイト一覧が掲載されています。JavaScriptのライブラリであるjQuery[^jquery]はAmazon上にてjQueryで検索[^jquery-amazon]するとjQuery関連の本が大量に表示されます。
+
+[^bootstrap]: http://getbootstrap.com/
+
+[^jquery]: http://jquery.com/
+
+[^jquery-amazon]: Amazonの「jQuery」の検索結果：http://www.amazon.co.jp/s/field-keywords=jquery
 
 このように、利用実績やライブラリについて本が書かれているかということをまず見ます。
 
@@ -148,12 +167,17 @@
 
 次に、ソースコードの流れを把握しやすいか見ます。何か困ったときにドキュメントを見ますが、それでも解決できない場合はソースコードを読む必要があるためです。そのときにソースコードの流れを把握できなかった場合、解決方法が見つからずつらくなります。
 
-全体把握しやすいライブラリとしてたとえば[Backbone.js](http://backbonejs.org/)が挙げられます。[ソースコード](https://github.com/jashkenas/backbone/blob/master/backbone.js)はまとまりの単位が小さいため流れを追いやすいです。ソースコードの行数も1,877行（2015/7/10現在）なので全体を読もうと思えば読めます。
+全体把握しやすいライブラリとしてたとえばBackbone.js[^backbone]が挙げられます。ソースコード[^backbone-source]はまとまりの単位が小さいため流れを追いやすいです。ソースコードの行数も1,877行（2015/7/10現在）なので全体を読もうと思えば読めます。
 
+[^backbone]: http://backbonejs.org/
+
+[^backbone-source]: https://github.com/jashkenas/backbone/blob/master/backbone.js
 
 #### ドキュメントがそろっている
 
-最後に、ドキュメントがあり、かつ読みやすいかを見ます。もちろん両方そろっているのが好ましいです。両方そろっている例としては[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)が挙げられます。
+最後に、ドキュメントがあり、かつ読みやすいかを見ます。もちろん両方そろっているのが好ましいです。両方そろっている例としてはflipsnap.js[^flipsnap]が挙げられます。
+
+[^flipsnap]: http://hokaccha.github.io/js-flipsnap/
 
 flipsnap.jsはドキュメントに次の項目がよくまとまっています。そのため使い方に困らないライブラリとなっています。
 
@@ -166,13 +190,17 @@ flipsnap.jsはドキュメントに次の項目がよくまとまっています
 
 ここまでライブラリ選定時の基準について書いてきました。ここからは実際にライブラリ選定をしていきます。はじめにCSSのライブラリから選定していきます。
 
-今回CSSのライブラリは[Bootstrap](https://github.com/twbs/bootstrap)のテーマである[Nico](http://kubosho.github.io/Nico/)を使います。
+今回CSSのライブラリはBootstrapのテーマであるNico[^nico]を使います。
+
+[^nico]: http://nico.kubosho.com/
 
 選定した理由としては、今回デザイナーがいない中ラブライブ！参加者募集サイトの見た目をアニメに近づけたいという思いがありました。ラブライブ！参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているためBootstrapを使うことにしました。
 
-ラブライブ！参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。なので今回のために[Honoka - 日本語も美しく表示できるBootstrapテーマ](http://honokak.osaka/)を元にNicoというBootstrapのテーマを作りました。
+ラブライブ！参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。なので今回のためにHonokaというBootstrapテーマ[^honoka]を元に、NicoというBootstrapのテーマを作りました。
 
-NicoはGitHubからダウンロードします。[https://github.com/kubosho/Nico/releases/latest](https://github.com/kubosho/Nico/releases/latest)にアクセスするとNicoの最新バージョンが表示されます。Downloadsを見ると図のようにzipファイルがあるのでクリックしてダウンロードします。ダウンロードが終わったらzipを展開して、中のファイルを`external`ディレクトリー内に入れておきます。
+[^honoka]: http://honokak.osaka/
+
+NicoはGitHubからダウンロードします。`https://github.com/kubosho/Nico/releases/latest`にアクセスするとNicoの最新バージョンが表示されます。Downloadsを見ると図1のようにzipファイルがあるのでクリックしてダウンロードします。ダウンロードが終わったらzipを展開して、中のファイルを`external`ディレクトリー内に入れておきます。
 
 
 ![Nicoのダウンロード](images/ch02/nico.jpg)
@@ -181,23 +209,25 @@ NicoはGitHubからダウンロードします。[https://github.com/kubosho/Nic
 
 次にJavaScriptのライブラリを選定していきます。今回JavaScript側で実装する機能として、カルーセルがあります。
 
-カルーセルは[Nike](http://www.nike.com/jp/ja_jp/) などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。このカルーセルを実現するためのライブラリは[slick](http://kenwheeler.github.io/slick/)にします。slickを使うために[jQuery](http://jquery.com/)も使います。
+カルーセルはNike[^nike]などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。このカルーセルを実現するためのライブラリはslick[^slick]にします。slickを使うためにjQueryも使います。
+
+[^nike]: http://www.nike.com/jp/ja_jp/
+
+[^slick]: http://kenwheeler.github.io/slick/
 
 選定した理由は2つあります。ひとつめとして、ドキュメントがそろっておりカルーセルを実装するときに困らないためです。これによりやりたいことがすぐ実現できます。ふたつめとして、slickは開発が活発なことです。ただ互換性がない更新も起こるので最新版に更新する際は注意が必要です。
 
-なお、カルーセルでの表示に無限ループがいらなければ[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)もおすすめです。jQueryに依存するライブラリでは他に[Owl Carousel](http://owlgraphic.com/owlcarousel/)がよく使われます。
-
-それではslickをダウンロードします。[http://kenwheeler.github.io/slick/](http://kenwheeler.github.io/slick/)にアクセスしたらページ上部の「get it now」をクリックします。すると「Download Now」というボタンが表示されるのでボタンをクリックします。するとzipファイルがダウンロードされます。ダウンロードが終わったらzipを展開して、中のファイルを`external`ディレクトリー内に入れておきます。
+それではslickをダウンロードします。`http://kenwheeler.github.io/slick/`にアクセスしたらページ上部の「get it now」をクリックします。すると「Download Now」というボタンが表示されるのでボタンをクリックします（図2）。するとzipファイルがダウンロードされるので、zipを展開して中のファイルを`external`ディレクトリー内に入れておきます。
 
 
 ![slickのダウンロード](images/ch02/slick.jpg)
 
-続いてjQueryもダウンロードします。[https://jquery.com/](https://jquery.com/)にアクセスしたら「Download jQuery」と書かれたボタンをクリックします。
+続いてjQueryもダウンロードします。`https://jquery.com/`にアクセスしたら「Download jQuery」と書かれたボタンをクリックします（図3）。
 
 
-![Download jQuery](images/ch02/jquery-01.jpg)
+![jQueryのダウンロード](images/ch02/jquery-01.jpg)
 
-ボタンを押すと各種jQueryがダウンロードできるページに遷移します。何種類かリンクがあるうち「Download the compressed, production jQuery」というリンクを右クリックして「リンク先を保存」をクリックします。保存先は`external`ディレクトリー内に保存します。
+ボタンを押すと各種jQueryがダウンロードできるページに遷移します。何種類かリンクがあるうち「Download the compressed, production jQuery」というリンクを右クリックして「リンク先を保存」をクリックします（図4）。保存先は`external`ディレクトリー内に保存します。
 
 
 ![production jQueryのリンク](images/ch02/jquery-02.jpg)
